# rankd

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md
api/proto/yanpit/: CMakeLists.txt  iperf.proto  localnet.proto  ncm.proto
cmd/rankd/: CMakeLists.txt  main.cpp
cmd/rankd/api/: api.cpp
cmd/rankd/cli/: options.cpp
cmd/rankd/components/: engine-computing.cpp  engine-network.cpp  engine-time.cpp
cmd/rankd/configs/: configs.cpp
cmd/rankd/include/: internals.h
cmd/rankd/include/api/: api.h
cmd/rankd/include/cli/: options.h
cmd/rankd/include/components/: engine-computing.h  engine-network.h  engine-time.h  engine.h
cmd/rankd/include/configs/: configs.h
cmd/rankd/src/: config.rs  service.rs
cmd/rankd/src/node/: graphics.rs  network.rs
internal/: CMakeLists.txt
internal/dry-rankd-comp/: CMakeLists.txt  lib.cpp
internal/dry-rankd-comp/data-sources/: cpu.cpp  memory.cpp  os.cpp  sensors.cpp  storage.cpp
internal/dry-rankd-comp/include/: dry-comp-lib.h
internal/dry-rankd-comp/include/data-sources/: cpu.h  memory.h  os.h  sensors.h  storage.h
internal/dry-rankd-net/: CMakeLists.txt  lib.cpp
internal/dry-rankd-net/data-sources/: interfaces.cpp  neighbors.cpp  routes.cpp
internal/dry-rankd-net/include/: dry-net-lib.h
internal/dry-rankd-net/include/data-sources/: interfaces.h  neighbors.h  routes.h
internal/dry-rankd-net/include/utils/: addresses.h
internal/dry-rankd-time/: CMakeLists.txt  lib.cpp
internal/dry-rankd-time/data-sources/configuration/: configuration.cpp
internal/dry-rankd-time/data-sources/latency/: latency.cpp  standards.cpp
internal/dry-rankd-time/data-sources/reliability/: reliability.cpp
internal/dry-rankd-time/data-sources/synchronization/: synchronization.cpp
internal/dry-rankd-time/include/: dry-time-lib.h
internal/rank-prelude/: CMakeLists.txt  README.md  prelude.cpp
internal/rank-prelude/assets/yang/: ieee802-dot1q-types.yang  ieee802-types.yang  nap-rank-types.yang  nap-rank.yang  tsn-cbs-draft.yang  tsn-tas.yang
internal/rank-prelude/docs/diagrams/: diagrams.drawio
internal/rank-prelude/include/: constants.h  prelude.h
internal/rank-prelude/include/structs/: bidset.h  capabilities.h  capability_item_type.h  current_capabilities.h  dispatcher.h  handler.h  handler_state.h  identifier.h  message.h  process.h  requesting_capabilities.h  reservation.h  reservation_state.h  resources.h  store.h  timeout_handler.h  timeout_handler_spec.h  timeout_table.h  translation_table.h
internal/rank-prelude/include/utils/: hashing.h  identity.h  marshalling.h  messaging.h  neighboring.h
internal/rank-prelude/structs/: capabilities.cpp  current_capabilities.cpp  dispatcher.cpp  handler.cpp  identifier.cpp  message.cpp  process.cpp  requesting_capabilities.cpp  reservation.cpp  resources.cpp  timeout_handler.cpp  timeout_handler_spec.cpp
internal/rank-prelude/structs/dispatchers/: receiver_dds.cpp  receiver_l2.cpp  receiver_l3.cpp  receiver_simulation.cpp  sender.cpp
internal/rank-prelude/structs/messages/: acc.cpp  bid.cpp  ear.cpp  header.cpp  mar.cpp  ref.cpp  rep.cpp
internal/rank-prelude/tests/: CMakeLists.txt
internal/rank-prelude/tests/utils/: identity_tester.cpp  netlink-route-tester.cpp  transformation_tester.cpp
internal/rank-prelude/utils/: identity.cpp  marshalling.cpp  messaging.cpp  neighboring.cpp
internal/rank-prelude/utils/identity/: network.cpp  session.cpp
internal/rank-prelude/utils/marshalling/: serialization.cpp  transformation.cpp  validation.cpp
internal/rankd-comp/: CMakeLists.txt  Cargo.toml  lib.cpp
internal/rankd-comp/archive/structs/: cpu.h  network.h
internal/rankd-comp/archive/structs-src/: memory.cpp  network.cpp
internal/rankd-comp/data-sources/: cpu.cpp  memory.cpp  os.cpp  sensors.cpp  storage.cpp
internal/rankd-comp/data-sources/linux/: cpu.cpp  os.cpp  storage.cpp
internal/rankd-comp/data-sources/macos/: cpu.cpp
internal/rankd-comp/include/: comp-lib.h
internal/rankd-comp/include/data-sources/: cpu.h  memory.h  os.h  sensors.h  storage.h
internal/rankd-comp/include/linux/: cpu.h  memory.h  os.h  sensors.h  storage.h
internal/rankd-comp/include/macos/: cpu.h
internal/rankd-comp/include/structs/: cpu.h  memory.h  network.h
internal/rankd-comp/include/utils/: strings.h
internal/rankd-comp/src/sources/: mod.rs  system.rs
internal/rankd-comp/structs/: cpu.cpp  memory.cpp  network.cpp
internal/rankd-comp/utils/: strings.cpp
internal/rankd-net/: CMakeLists.txt  Cargo.toml  lib.cpp
internal/rankd-net/data-sources/: interfaces.cpp  neighbors.cpp  routes.cpp  yanpit.cpp
internal/rankd-net/data-sources/yanpit/: iperf.pb.cc  localnet.pb.cc  ncm.pb.cc
internal/rankd-net/include/: net-lib.h
internal/rankd-net/include/data-sources/: interfaces.h  neighbors.h  routes.h  yanpit.h
internal/rankd-net/include/structs/: interfaces.h  yanpit-interfaces.h
internal/rankd-net/include/utils/: addresses.h
internal/rankd-net/structs/: interfaces.cpp
internal/rankd-net/utils/: addresses.cpp
internal/rankd-time/: CMakeLists.txt  Cargo.toml  lib.cpp
internal/rankd-time/archive/latency/: cbs.cpp
internal/rankd-time/data-sources/latency/: latency.cpp  standards.cpp
internal/rankd-time/data-sources/synchronization/: synchronization.cpp
internal/rankd-time/include/: time-lib.h
internal/rankd-time/include/latency/: cbs.h  tas.h
internal/rankd-time/include/relyum/: hardware-structs.h  services.h  snmp.h  structs.h  timesync.h
internal/rankd-time/include/standards/: ieee.h
internal/rankd-time/include/utils/: kernel.h
internal/rankd-time/relyum/: hardware-structs.cpp  snmp.cpp  structs.cpp  timesync.cpp
internal/rankd-time/utils/: kernel.cpp
tests/software/: CMakeLists.txt  cpu-monitor.cpp  memory-monitor.cpp  network-monitor.cpp  os-monitor.cpp  ptp-monitor.cpp  ptp2-monitor.cpp  relyum-snmp-monitor.cpp  sensors-monitor.cpp  storage-monitor.cpp  tc-tryout.cpp
tests/software/tc-utils/: color.cpp  color.h  json_print.h  json_writer.cpp  libnetlink.cpp  libnetlink.h  list.h  ll_map.cpp  tc_core.cpp  utils.h
(+121 files in other folders)
