[package]
name = "rankd"
version = "0.1.0"
authors = ["Rui Lopes <ruieduardo.fa.lopes@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1"
uname = "0.1.1"
slog = "2.7"
slog-term = "2.8"
slog-async = "2.6"
toml = "0.5"
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pnet = "0.28"
chrono = "0.4"
os_info = "3.0"
systemstat = "0.1"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
validator = "0.14"
sysinfo = "0.19"
nvml-wrapper = "0.7"
json = "0.12"
netstat = "0.7"
openssl = "0.10"
base64 = "0.13"
reqwest = "0.11"
